--- a/.github/workflows/vscode-extension.yml
+++ b/.github/workflows/vscode-extension.yml
@@ -93,7 +93,6 @@ jobs:
 
   publish-marketplace:
     name: Publish VSCode Extension
-    if: ${{ github.event.action == 'published' }}
     needs:
       - test-build
     runs-on: ubuntu-latest
@@ -106,13 +105,16 @@ jobs:
 
       - name: Install Dependencies
         run: npm ci
+
+      - name: Compile packages
+        run: npm run build-all
       
       - name: Compile TS
         run: npm run compile --workspace ${{ env.GIT_WORKSPACE }}
 
       # Separate steps for prerelease and release workflows
       - name: Publish as pre-release
-        if: ${{ github.event.release.prerelease }}
+        if: ${{ github.event.action != 'published' && startsWith(github.ref, 'refs/tags/v') }}
         uses: HaaLeo/publish-vscode-extension@v1.0.4
         with:
           pat: ${{ secrets.VSCE_PAT }}
@@ -122,7 +124,7 @@ jobs:
           preRelease: true
 
       - name: Publish as official release
-        if: ${{ !github.event.release.prerelease }}
+        if: ${{ github.event.action == 'published' && !github.event.release.prerelease }}
         uses: HaaLeo/publish-vscode-extension@v1.0.4
         with:
           pat: ${{ secrets.VSCE_PAT }}
