chore: change push branch to main

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
     tags:
       - v*
     branches:
-      - 1287-workflows-on-push-to-main
+      - main
 
   release:
     types: [published]
