re-enable activation tests

--- a/taqueria-vscode-extension/package.json
+++ b/taqueria-vscode-extension/package.json
@@ -71,7 +71,14 @@
 		"SmartPy",
 		"Archetype"
 	],
-	"activationEvents": [],
+	"activationEvents": [
+		"onCommand:taqueria.init",
+		"onCommand:taqueria.scaffold",
+		"onCommand:taqueria.opt_in",
+		"onCommand:taqueria.opt_out",
+		"workspaceContains:.taq",
+		"onStartupFinished"
+	],
 	"main": "./out/main.js",
 	"contributes": {
 		"configuration": {
