--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,6 +57,30 @@ jobs:
         else
           echo "::set-output name=result::odd"
         fi
+  build-and-cache-node-modules:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup repo
+        uses: actions/checkout@v2
+        
+      - uses: actions/setup-node@v3
+        with: 
+          registry-url: ${{ env.NPM_REGISTRY }}
+          scope: "${{ env.SCOPE }}"
+
+      - name: Install any dependencies
+        run: npm ci
+
+      - name: Build all
+        run: npm run build-all
+
+      - name: Cache node modules
+        uses: actions/cache@v3
+        with:
+          path: ./node_modules
+          key: cache-node-modules-${{ hashFiles('./package-lock.json') }}
+          restore-keys: |
+           cache-node-modules
 
   build-binaries:
     permissions:
@@ -71,23 +95,14 @@ jobs:
          - os: ubuntu-latest
            os_short: ubuntu
            deno_target: "x86_64-unknown-linux-gnu"
-           cache_path: |
-            ./deno
-            ~/.cache/deno
            taqueria_bin: "taq"
          - os: windows-latest
            os_short: windows
            deno_target: "x86_64-pc-windows-msvc"
-           cache_path: |
-            ./deno
-            ~/AppData/Local/deno
            taqueria_bin: "taq.exe"
          - os: macOS-latest
            os_short: macos
            deno_target: "x86_64-apple-darwin"
-           cache_path: |
-            ./deno
-            ~/Library/Caches/deno
            taqueria_bin: "taq"
 
     outputs:
@@ -107,10 +122,13 @@ jobs:
         with:
           deno-version: "1.23.4"
 
-      - uses: actions/cache@v3
+      - name: Cache node modules
+        uses: actions/cache@v3
         with:
-          path: ${{ matrix.cache_path }}
-          key: ${{ runner.os }}-deno-${{ hashFiles('**/deno-lock.json') }}
+          path: ./node_modules
+          key: cache-node-modules-${{ hashFiles('./package-lock.json') }}
+          restore-keys: |
+           cache-node-modules
 
       ## This job will compile the binary for the target OS. The binary is then tested by initializing a project called "test_project"
       ## If the initialization command output is equal to "Project taq'ified!" we know that the binary works for the given os, else the command exits with status code 1.
@@ -149,131 +167,6 @@ jobs:
         id: public-url
         run: |
           echo "::set-output name=${{ matrix.os_short }}::https://storage.googleapis.com/taqueria-artifacts/${{ steps.upload-file.outputs.uploaded }}"
-
-  publish-protocol-to-npm:
-    if: ${{ !github.event.pull_request.head.repo.fork }}
-    uses: ./.github/workflows/npm-publish.yml
-    with:
-      dir: taqueria-protocol
-    secrets:
-      NPM_TOKEN: ${{ secrets.NPMJS_PAT }}
-
-  publish-sdk-to-npm:
-    if: ${{ !github.event.pull_request.head.repo.fork }}
-    needs: publish-protocol-to-npm
-    uses: ./.github/workflows/npm-publish.yml
-    with:
-      dir: taqueria-sdk
-    secrets:
-      NPM_TOKEN: ${{ secrets.NPMJS_PAT }}
-
-  publish-toolkit-to-npm:
-    if: ${{ !github.event.pull_request.head.repo.fork }}
-    needs: publish-protocol-to-npm
-    uses: ./.github/workflows/npm-publish.yml
-    with:
-      dir: taqueria-toolkit
-    secrets:
-      NPM_TOKEN: ${{ secrets.NPMJS_PAT }}
-
-  publish-ligo-plugin-to-npm:
-    if: ${{ !github.event.pull_request.head.repo.fork }}
-    needs: publish-sdk-to-npm
-    uses: ./.github/workflows/npm-publish.yml
-    with:
-      dir: taqueria-plugin-ligo
-    secrets:
-      NPM_TOKEN: ${{ secrets.NPMJS_PAT }}
-  
-  publish-smartpy-plugin-to-npm:
-    if: ${{ !github.event.pull_request.head.repo.fork }}
-    needs: publish-sdk-to-npm
-    uses: ./.github/workflows/npm-publish.yml
-    with:
-      dir: taqueria-plugin-smartpy
-    secrets:
-      NPM_TOKEN: ${{ secrets.NPMJS_PAT }}
-
-  publish-taquito-plugin-to-npm:
-    if: ${{ !github.event.pull_request.head.repo.fork }}
-    needs: publish-sdk-to-npm
-    uses: ./.github/workflows/npm-publish.yml
-    with:
-      dir: taqueria-plugin-taquito
-    secrets:
-      NPM_TOKEN: ${{ secrets.NPMJS_PAT }}
-
-  publish-flextesa-plugin-to-npm:
-    if: ${{ !github.event.pull_request.head.repo.fork }}
-    needs: publish-sdk-to-npm
-    uses: ./.github/workflows/npm-publish.yml
-    with:
-      dir: taqueria-plugin-flextesa
-    secrets:
-      NPM_TOKEN: ${{ secrets.NPMJS_PAT }}
-
-  publish-archetype-plugin-to-npm:
-    if: ${{ !github.event.pull_request.head.repo.fork }}
-    needs: publish-sdk-to-npm
-    uses: ./.github/workflows/npm-publish.yml
-    with:
-      dir: taqueria-plugin-archetype
-    secrets:
-      NPM_TOKEN: ${{ secrets.NPMJS_PAT }}
-
-  publish-tezos-client-plugin-to-npm:
-    if: ${{ !github.event.pull_request.head.repo.fork }}
-    needs: publish-sdk-to-npm
-    uses: ./.github/workflows/npm-publish.yml
-    with:
-      dir: taqueria-plugin-tezos-client
-    secrets:
-      NPM_TOKEN: ${{ secrets.NPMJS_PAT }}
-
-  publish-contract-types-plugin-to-npm:
-    if: ${{ !github.event.pull_request.head.repo.fork }}
-    needs: publish-sdk-to-npm
-    uses: ./.github/workflows/npm-publish.yml
-    with:
-      dir: taqueria-plugin-contract-types
-    secrets:
-      NPM_TOKEN: ${{ secrets.NPMJS_PAT }}
-
-  publish-ipfs-pinata-plugin-to-npm:
-    if: ${{ !github.event.pull_request.head.repo.fork }}
-    needs: publish-sdk-to-npm
-    uses: ./.github/workflows/npm-publish.yml
-    with:
-      dir: taqueria-plugin-ipfs-pinata
-    secrets:
-      NPM_TOKEN: ${{ secrets.NPMJS_PAT }}
-
-  publish-metadata-plugin-to-npm:
-    if: ${{ !github.event.pull_request.head.repo.fork }}
-    needs: publish-sdk-to-npm
-    uses: ./.github/workflows/npm-publish.yml
-    with:
-      dir: taqueria-plugin-metadata
-    secrets:
-      NPM_TOKEN: ${{ secrets.NPMJS_PAT }}
-
-  publish-jest-plugin-to-npm:
-    if: ${{ !github.event.pull_request.head.repo.fork }}
-    needs: publish-sdk-to-npm
-    uses: ./.github/workflows/npm-publish.yml
-    with:
-      dir: taqueria-plugin-jest
-    secrets:
-      NPM_TOKEN: ${{ secrets.NPMJS_PAT }}
-
-  publish-state-plugin-to-npm:
-    if: ${{ !github.event.pull_request.head.repo.fork }}
-    needs: publish-sdk-to-npm
-    uses: ./.github/workflows/npm-publish.yml
-    with:
-      dir: taqueria-state
-    secrets:
-      NPM_TOKEN: ${{ secrets.NPMJS_PAT }}
 
   gather-info-for-e2e-tests:
     runs-on: ubuntu-latest
@@ -356,10 +249,13 @@ jobs:
         with:
           deno-version: "1.23.4"
 
-      - uses: actions/cache@v3
+      - name: Cache node modules
+        uses: actions/cache@v3
         with:
-          path: ${{ matrix.cache_path }}
-          key: ${{ runner.os }}-deno-${{ hashFiles('**/deno-lock.json') }}
+          path: ./node_modules
+          key: cache-node-modules-${{ hashFiles('./package-lock.json') }}
+          restore-keys: |
+            cache-node-modules
 
       - name: download the binary from the build-binaries job and make it executable
         if: ${{ !github.event.pull_request.head.repo.fork }}
@@ -390,11 +286,6 @@ jobs:
           brew install docker
           brew install colima
           colima start
-
-      - name: build packages for testing
-        run: |
-          npm run build -w taqueria-sdk -w taqueria-protocol -w taqueria-plugin-flextesa -w taqueria-plugin-taquito -w taqueria-plugin-ligo -w taqueria-plugin-smartpy -w taqueria-flextesa-manager -w taqueria-plugin-contract-types -w taqueria-plugin-ipfs-pinata -w taqueria-plugin-metadata -w taqueria-plugin-archetype -w taqueria-plugin-tezos-client -w taqueria-state -w taqueria-plugin-jest
-          npm run build-docker -w taqueria-flextesa-manager
 
       - name: Run unit tests
         run: npm run test:unit -w tests
@@ -535,15 +426,6 @@ jobs:
     needs:
       - detect-minor-version
       - build-binaries
-      - publish-ligo-plugin-to-npm
-      - publish-smartpy-plugin-to-npm
-      - publish-taquito-plugin-to-npm
-      - publish-flextesa-plugin-to-npm
-      - publish-contract-types-plugin-to-npm
-      - publish-archetype-plugin-to-npm
-      - publish-tezos-client-plugin-to-npm
-      - publish-state-plugin-to-npm
-      - publish-jest-plugin-to-npm
       - vscode-extension-workflow
     if: ${{ startsWith(github.ref, 'refs/tags/v') &&
             !github.event.pull_request.head.repo.fork }}
