chore: added dependency on cach to build-binaries job

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,6 +88,8 @@ jobs:
       id-token: 'write'
     runs-on: ${{ matrix.os }}
     if: ${{ github.event_name != 'release' && !github.event.pull_request.head.repo.fork }}
+    needs:
+      - build-and-cache-node-modules
     strategy:
       fail-fast: true
       matrix:
