--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,6 +67,11 @@ jobs:
         with: 
           registry-url: ${{ env.NPM_REGISTRY }}
           scope: "${{ env.SCOPE }}"
+          
+      - name: Setup Deno
+        uses: denoland/setup-deno@v1
+        with:
+          deno-version: "1.23.4"
 
       - name: Install any dependencies
         run: npm ci
@@ -96,7 +101,7 @@ jobs:
           key: cache-node-modules-new-${{ hashFiles('./package-lock.json') }}
 
       - name: Run integration tests
-        run: ls -ltr ./node_modules/@taqueria/node-sdk
+        run: ls -ltr ./node_modules/@taqueria/node-sdk/
 
 #   build-binaries:
 #     permissions:
