--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,7 +77,9 @@ jobs:
         run: npm ci
 
       - name: Build all
-        run: npm run build-all
+        run: |
+          npm run build-all
+          ls -ltr ./node_modules/@taqueria/node-sdk/
 
       - name: Cache node modules
         uses: actions/cache@v3
@@ -85,233 +87,233 @@ jobs:
           path: ./node_modules
           key: cache-node-modules-${{ github.run_id }}
 
-  build-binaries:
-    permissions:
-      contents: 'read'
-      id-token: 'write'
-    runs-on: ${{ matrix.os }}
-    if: ${{ github.event_name != 'release' && !github.event.pull_request.head.repo.fork }}
-    needs:
-      - build-and-cache-node-modules
-    strategy:
-      fail-fast: true
-      matrix:
-       include:
-         - os: ubuntu-latest
-           os_short: ubuntu
-           deno_target: "x86_64-unknown-linux-gnu"
-           taqueria_bin: "taq"
-         - os: windows-latest
-           os_short: windows
-           deno_target: "x86_64-pc-windows-msvc"
-           taqueria_bin: "taq.exe"
-         - os: macOS-latest
-           os_short: macos
-           deno_target: "x86_64-apple-darwin"
-           taqueria_bin: "taq"
+  # build-binaries:
+  #   permissions:
+  #     contents: 'read'
+  #     id-token: 'write'
+  #   runs-on: ${{ matrix.os }}
+  #   if: ${{ github.event_name != 'release' && !github.event.pull_request.head.repo.fork }}
+  #   needs:
+  #     - build-and-cache-node-modules
+  #   strategy:
+  #     fail-fast: true
+  #     matrix:
+  #      include:
+  #        - os: ubuntu-latest
+  #          os_short: ubuntu
+  #          deno_target: "x86_64-unknown-linux-gnu"
+  #          taqueria_bin: "taq"
+  #        - os: windows-latest
+  #          os_short: windows
+  #          deno_target: "x86_64-pc-windows-msvc"
+  #          taqueria_bin: "taq.exe"
+  #        - os: macOS-latest
+  #          os_short: macos
+  #          deno_target: "x86_64-apple-darwin"
+  #          taqueria_bin: "taq"
 
-    outputs:
-      public-url-ubuntu: ${{ steps.public-url.outputs.ubuntu }}
-      public-url-windows: ${{ steps.public-url.outputs.windows }}
-      public-url-macos: ${{ steps.public-url.outputs.macos }}
+  #   outputs:
+  #     public-url-ubuntu: ${{ steps.public-url.outputs.ubuntu }}
+  #     public-url-windows: ${{ steps.public-url.outputs.windows }}
+  #     public-url-macos: ${{ steps.public-url.outputs.macos }}
 
-    env:
-      DENO_TARGET: ${{ matrix.deno_target }}
+  #   env:
+  #     DENO_TARGET: ${{ matrix.deno_target }}
 
-    steps:
-      - name: Setup repo
-        uses: actions/checkout@v2
+  #   steps:
+  #     - name: Setup repo
+  #       uses: actions/checkout@v2
 
-      - name: Setup Deno
-        uses: denoland/setup-deno@v1
-        with:
-          deno-version: "1.23.4"
+  #     - name: Setup Deno
+  #       uses: denoland/setup-deno@v1
+  #       with:
+  #         deno-version: "1.23.4"
 
-      - name: Cache node modules
-        uses: actions/cache@v3
-        with:
-          path: ./node_modules
-          key: cache-node-modules-${{ github.run_id }}
+  #     - name: Cache node modules
+  #       uses: actions/cache@v3
+  #       with:
+  #         path: ./node_modules
+  #         key: cache-node-modules-${{ github.run_id }}
 
-      ## This job will compile the binary for the target OS. The binary is then tested by initializing a project called "test_project"
-      ## If the initialization command output is equal to "Project taq'ified!" we know that the binary works for the given os, else the command exits with status code 1.
-      - name: Build the binary for ${{ matrix.os }}
-        id: build-bin
-        shell: bash
-        env:
-          TAQ_VERSION: ${{ github.ref_name }}
-          DENO_DIR: "./deno"
-        run: |
-          BUILD=`git rev-parse --short "$GITHUB_SHA"`
-          TAQ_VERSION="${TAQ_VERSION/\//-}"
-          deno compile --output taq --allow-run --allow-write --allow-read --allow-env --allow-net --import-map ./import_map.json --no-prompt --target $DENO_TARGET index.ts --quickstart "`cat quickstart.md`" --setBuild "$BUILD" --setVersion "$TAQ_VERSION" --lock ./deno-lock.json
-          ./"${{ matrix.taqueria_bin }}" init -p ./test_project
-          if [ ! -f ./test_project/.taq/config.json ]; then
-            echo "Project not initialized"
-            exit 1
-          fi
-          mv "${{ matrix.taqueria_bin }}" "taq.${{ matrix.deno_target }}"
+  #     ## This job will compile the binary for the target OS. The binary is then tested by initializing a project called "test_project"
+  #     ## If the initialization command output is equal to "Project taq'ified!" we know that the binary works for the given os, else the command exits with status code 1.
+  #     - name: Build the binary for ${{ matrix.os }}
+  #       id: build-bin
+  #       shell: bash
+  #       env:
+  #         TAQ_VERSION: ${{ github.ref_name }}
+  #         DENO_DIR: "./deno"
+  #       run: |
+  #         BUILD=`git rev-parse --short "$GITHUB_SHA"`
+  #         TAQ_VERSION="${TAQ_VERSION/\//-}"
+  #         deno compile --output taq --allow-run --allow-write --allow-read --allow-env --allow-net --import-map ./import_map.json --no-prompt --target $DENO_TARGET index.ts --quickstart "`cat quickstart.md`" --setBuild "$BUILD" --setVersion "$TAQ_VERSION" --lock ./deno-lock.json
+  #         ./"${{ matrix.taqueria_bin }}" init -p ./test_project
+  #         if [ ! -f ./test_project/.taq/config.json ]; then
+  #           echo "Project not initialized"
+  #           exit 1
+  #         fi
+  #         mv "${{ matrix.taqueria_bin }}" "taq.${{ matrix.deno_target }}"
 
-      - name: Authenticate with GCP
-        id: gcp-auth
-        uses: google-github-actions/auth@v0
-        with:
-          workload_identity_provider: "projects/${{ secrets.GCP_PROJECT }}/locations/global/workloadIdentityPools/github-actions-storage-pool/providers/github-actions-oidc-provider"
-          service_account: "${{ secrets.GCP_SERVICE_ACCOUNT }}"
+  #     - name: Authenticate with GCP
+  #       id: gcp-auth
+  #       uses: google-github-actions/auth@v0
+  #       with:
+  #         workload_identity_provider: "projects/${{ secrets.GCP_PROJECT }}/locations/global/workloadIdentityPools/github-actions-storage-pool/providers/github-actions-oidc-provider"
+  #         service_account: "${{ secrets.GCP_SERVICE_ACCOUNT }}"
 
-      - name: Upload binary to GCP
-        id: upload-file
-        uses: 'google-github-actions/upload-cloud-storage@v0'
-        with:
-          path: "taq.${{ matrix.deno_target }}"
-          destination: "taqueria-artifacts/${{ github.ref }}"
+  #     - name: Upload binary to GCP
+  #       id: upload-file
+  #       uses: 'google-github-actions/upload-cloud-storage@v0'
+  #       with:
+  #         path: "taq.${{ matrix.deno_target }}"
+  #         destination: "taqueria-artifacts/${{ github.ref }}"
 
-      - name: Set public url
-        id: public-url
-        run: |
-          echo "::set-output name=${{ matrix.os_short }}::https://storage.googleapis.com/taqueria-artifacts/${{ steps.upload-file.outputs.uploaded }}"
+  #     - name: Set public url
+  #       id: public-url
+  #       run: |
+  #         echo "::set-output name=${{ matrix.os_short }}::https://storage.googleapis.com/taqueria-artifacts/${{ steps.upload-file.outputs.uploaded }}"
 
-  gather-info-for-e2e-tests:
-    runs-on: ubuntu-latest
-    needs: 
-      - build-binaries
+  # gather-info-for-e2e-tests:
+  #   runs-on: ubuntu-latest
+  #   needs: 
+  #     - build-binaries
     
-    if: ${{ always() && !(contains(needs.*.result, 'failure')) && github.event_name != 'release' }}
+  #   if: ${{ always() && !(contains(needs.*.result, 'failure')) && github.event_name != 'release' }}
     
-    outputs:
-      test-chunks: ${{ steps['set-test-chunks'].outputs['test-chunks'] }}
-      test-chunk-ids: ${{ steps['set-test-chunk-ids'].outputs['test-chunk-ids'] }}
-      test-chunks-formatted: ${{ steps['format-test-chunks'].outputs['test-chunks-formatted'] }}
+  #   outputs:
+  #     test-chunks: ${{ steps['set-test-chunks'].outputs['test-chunks'] }}
+  #     test-chunk-ids: ${{ steps['set-test-chunk-ids'].outputs['test-chunk-ids'] }}
+  #     test-chunks-formatted: ${{ steps['format-test-chunks'].outputs['test-chunks-formatted'] }}
     
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: 16.16.x
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: actions/setup-node@v2
+  #       with:
+  #         node-version: 16.16.x
 
-      # This step currently attempts to put all test files found in the e2e folder into 4 equal sized buckets. The output is a list of lists 
-      - id: set-test-chunks
-        name: Set Chunks
-        run: echo "::set-output name=test-chunks::$(npx jest --listTests --json tests/e2e/ | jq -c '[_nwise(length / 2 | ceil)]')"
+  #     # This step currently attempts to put all test files found in the e2e folder into 4 equal sized buckets. The output is a list of lists 
+  #     - id: set-test-chunks
+  #       name: Set Chunks
+  #       run: echo "::set-output name=test-chunks::$(npx jest --listTests --json tests/e2e/ | jq -c '[_nwise(length / 2 | ceil)]')"
       
-      # This step just creates a list of numbers representing the different buckets of tests
-      - id: set-test-chunk-ids
-        name: Set Chunk IDs
-        run: echo "::set-output name=test-chunk-ids::$(echo $CHUNKS | jq -c 'to_entries | map(.key)')"
-        env:
-          CHUNKS: ${{ steps['set-test-chunks'].outputs['test-chunks'] }}
+  #     # This step just creates a list of numbers representing the different buckets of tests
+  #     - id: set-test-chunk-ids
+  #       name: Set Chunk IDs
+  #       run: echo "::set-output name=test-chunk-ids::$(echo $CHUNKS | jq -c 'to_entries | map(.key)')"
+  #       env:
+  #         CHUNKS: ${{ steps['set-test-chunks'].outputs['test-chunks'] }}
       
-      # This step will take in the buckets of tests and format the names to remove the absolute path part leaving only the name we care about
-      - id: format-test-chunks
-        name: Format Chunks
-        run: echo "::set-output name=test-chunks-formatted::$(echo $CHUNKS | jq -c '[.[] | join(" ") | sub("(/home|/Users)/runner/work/taqueria/taqueria/tests/e2e/";"";"g")]')"
-        env:
-          CHUNKS: ${{ steps['set-test-chunks'].outputs['test-chunks'] }}
+  #     # This step will take in the buckets of tests and format the names to remove the absolute path part leaving only the name we care about
+  #     - id: format-test-chunks
+  #       name: Format Chunks
+  #       run: echo "::set-output name=test-chunks-formatted::$(echo $CHUNKS | jq -c '[.[] | join(" ") | sub("(/home|/Users)/runner/work/taqueria/taqueria/tests/e2e/";"";"g")]')"
+  #       env:
+  #         CHUNKS: ${{ steps['set-test-chunks'].outputs['test-chunks'] }}
 
-  run-tests:
-    name: OS ${{ matrix.os }} test chunk ${{ matrix.chunk-ids }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: true
-      matrix:
-        os: [ubuntu-latest, macos-latest]
-        chunk-ids: ${{ fromJson(needs.gather-info-for-e2e-tests.outputs['test-chunk-ids']) }}
-        include:
-        - os: ubuntu-latest
-          url: ${{ needs.build-binaries.outputs.public-url-ubuntu }}
-          final-name: taq
-          make-executable-cmd: chmod +x
-          get-current-dir: echo "$(pwd)"
-          cache_path: |
-            ~/.deno
-            ~/.cache/deno
-        - os: macos-latest
-          url: ${{ needs.build-binaries.outputs.public-url-macos }}
-          final-name: taq
-          make-executable-cmd: chmod +x
-          get-current-dir: echo "$(pwd)"
-          cache_path: |
-            ~/.deno
-            ~/Library/Caches/deno
+  # run-tests:
+  #   name: OS ${{ matrix.os }} test chunk ${{ matrix.chunk-ids }}
+  #   runs-on: ${{ matrix.os }}
+  #   strategy:
+  #     fail-fast: true
+  #     matrix:
+  #       os: [ubuntu-latest, macos-latest]
+  #       chunk-ids: ${{ fromJson(needs.gather-info-for-e2e-tests.outputs['test-chunk-ids']) }}
+  #       include:
+  #       - os: ubuntu-latest
+  #         url: ${{ needs.build-binaries.outputs.public-url-ubuntu }}
+  #         final-name: taq
+  #         make-executable-cmd: chmod +x
+  #         get-current-dir: echo "$(pwd)"
+  #         cache_path: |
+  #           ~/.deno
+  #           ~/.cache/deno
+  #       - os: macos-latest
+  #         url: ${{ needs.build-binaries.outputs.public-url-macos }}
+  #         final-name: taq
+  #         make-executable-cmd: chmod +x
+  #         get-current-dir: echo "$(pwd)"
+  #         cache_path: |
+  #           ~/.deno
+  #           ~/Library/Caches/deno
 
-    env:
-      UNLIMITED_PINATA_TOKEN: ${{ secrets.PINATA_JWT_TOKEN }}
-      SCAFFOLDING_PAT: ${{ secrets.SCAFFOLDING_PAT }}
+  #   env:
+  #     UNLIMITED_PINATA_TOKEN: ${{ secrets.PINATA_JWT_TOKEN }}
+  #     SCAFFOLDING_PAT: ${{ secrets.SCAFFOLDING_PAT }}
 
-    needs:
-      - build-binaries
-      - gather-info-for-e2e-tests
-    if: ${{ always() && !(contains(needs.*.result, 'failure')) && github.event_name != 'release' && !(startsWith(github.ref, 'refs/tags/v')) }}
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: 16.16.x
+  #   needs:
+  #     - build-binaries
+  #     - gather-info-for-e2e-tests
+  #   if: ${{ always() && !(contains(needs.*.result, 'failure')) && github.event_name != 'release' && !(startsWith(github.ref, 'refs/tags/v')) }}
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: actions/setup-node@v2
+  #       with:
+  #         node-version: 16.16.x
       
-      - uses: denoland/setup-deno@v1
-        with:
-          deno-version: "1.23.4"
+  #     - uses: denoland/setup-deno@v1
+  #       with:
+  #         deno-version: "1.23.4"
 
-      - name: Cache node modules
-        uses: actions/cache@v3
-        with:
-          path: ./node_modules
-          key: cache-node-modules-${{ github.run_id }}
+  #     - name: Cache node modules
+  #       uses: actions/cache@v3
+  #       with:
+  #         path: ./node_modules
+  #         key: cache-node-modules-${{ github.run_id }}
 
-      - name: download the binary from the build-binaries job and make it executable
-        if: ${{ !github.event.pull_request.head.repo.fork }}
-        run: |
-          curl --url ${{ matrix.url }} -o ${{ matrix.final-name }} -L
-          ${{ matrix.make-executable-cmd }} ${{ matrix.final-name }}
-          ${{ matrix.get-current-dir }} >> $GITHUB_PATH
+  #     - name: download the binary from the build-binaries job and make it executable
+  #       if: ${{ !github.event.pull_request.head.repo.fork }}
+  #       run: |
+  #         curl --url ${{ matrix.url }} -o ${{ matrix.final-name }} -L
+  #         ${{ matrix.make-executable-cmd }} ${{ matrix.final-name }}
+  #         ${{ matrix.get-current-dir }} >> $GITHUB_PATH
 
-      - name: build binary and make executable
-        if: ${{ github.event.pull_request.head.repo.fork }}
-        env:
-          TAQ_VERSION: ${{ github.ref_name }}
-          DENO_DIR: "./deno"
-        run: |
-          COMMIT=`git rev-parse --short "$GITHUB_SHA"`
-          TAQ_VERSION="${TAQ_VERSION/\//-}"
-          deno compile --output taq --target $DENO_TARGET --allow-run --allow-write --allow-read --allow-env --allow-net index.ts --quickstart "`cat quickstart.md`" --setBuild "$COMMIT" --setVersion "$TAQ_VERSION" --lock ./deno-lock.json
-          [[ $(./taq init -p ./test_project) == "Project taq'ified!" ]] 
-          chmod +x taq
-          echo "$(pwd)" >> $GITHUB_PATH
+  #     - name: build binary and make executable
+  #       if: ${{ github.event.pull_request.head.repo.fork }}
+  #       env:
+  #         TAQ_VERSION: ${{ github.ref_name }}
+  #         DENO_DIR: "./deno"
+  #       run: |
+  #         COMMIT=`git rev-parse --short "$GITHUB_SHA"`
+  #         TAQ_VERSION="${TAQ_VERSION/\//-}"
+  #         deno compile --output taq --target $DENO_TARGET --allow-run --allow-write --allow-read --allow-env --allow-net index.ts --quickstart "`cat quickstart.md`" --setBuild "$COMMIT" --setVersion "$TAQ_VERSION" --lock ./deno-lock.json
+  #         [[ $(./taq init -p ./test_project) == "Project taq'ified!" ]] 
+  #         chmod +x taq
+  #         echo "$(pwd)" >> $GITHUB_PATH
 
-      - name: install dependencies
-        run: npm ci
+  #     - name: install dependencies
+  #       run: npm ci
 
-      - name: setup-docker
-        if: runner.os == 'macOS'
-        run: |
-          brew install docker
-          brew install colima
-          colima start
+  #     - name: setup-docker
+  #       if: runner.os == 'macOS'
+  #       run: |
+  #         brew install docker
+  #         brew install colima
+  #         colima start
 
-      - name: Run unit tests
-        run: npm run test:unit -w tests
+  #     - name: Run unit tests
+  #       run: npm run test:unit -w tests
 
-      - name: Run integration tests
-        run: npm run test:integration -w tests
+  #     - name: Run integration tests
+  #       run: npm run test:integration -w tests
 
-      - name: Run e2e tests
-        run: npm run test:e2e -w tests ${{ fromJSON(env.CHUNKS)[matrix.chunk-ids] }}
-        env:
-          CHUNKS: ${{ needs.gather-info-for-e2e-tests.outputs['test-chunks-formatted'] }}
+  #     - name: Run e2e tests
+  #       run: npm run test:e2e -w tests ${{ fromJSON(env.CHUNKS)[matrix.chunk-ids] }}
+  #       env:
+  #         CHUNKS: ${{ needs.gather-info-for-e2e-tests.outputs['test-chunks-formatted'] }}
   
-  report-e2e-status:
-    needs: run-tests
-    if:  ${{ failure() && github.event_name != 'release' }}
-    runs-on: ubuntu-latest
-    steps:
-      - uses: ravsamhq/notify-slack-action@v1
-        with:
-          notification_title: "Failure in the e2e Tests"
-          status: ${{ needs.run-tests.result }} # required
-          notify_when: 'failure'
-          message_format: '{emoji} ${{ github.actor }}, *{workflow}* {status_message}, please investigate: <{run_url}|Failing Run>'
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.E2E_MONITORING_SLACK }} # required
+  # report-e2e-status:
+  #   needs: run-tests
+  #   if:  ${{ failure() && github.event_name != 'release' }}
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: ravsamhq/notify-slack-action@v1
+  #       with:
+  #         notification_title: "Failure in the e2e Tests"
+  #         status: ${{ needs.run-tests.result }} # required
+  #         notify_when: 'failure'
+  #         message_format: '{emoji} ${{ github.actor }}, *{workflow}* {status_message}, please investigate: <{run_url}|Failing Run>'
+  #       env:
+  #         SLACK_WEBHOOK_URL: ${{ secrets.E2E_MONITORING_SLACK }} # required
 
   # vscode-extension-workflow:
   #   needs: 
