--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -423,42 +423,42 @@ jobs:
   #             })
   #           }
 
-  release:
-    name: Release
-    runs-on: ubuntu-latest
-    needs:
-      - detect-minor-version
-      - build-binaries
-      # - vscode-extension-workflow
-    if: ${{ startsWith(github.ref, 'refs/tags/v') &&
-            !github.event.pull_request.head.repo.fork }}
-    steps:
-      - uses: actions/checkout@v2
+#   release:
+#     name: Release
+#     runs-on: ubuntu-latest
+#     needs:
+#       - detect-minor-version
+#       - build-binaries
+#       # - vscode-extension-workflow
+#     if: ${{ startsWith(github.ref, 'refs/tags/v') &&
+#             !github.event.pull_request.head.repo.fork }}
+#     steps:
+#       - uses: actions/checkout@v2
 
-      - name: Download binaries 
-        id: download-binaries 
-        run: |
-          mkdir release && cd release
-          wget ${{ needs.build-binaries.outputs.public-url-ubuntu }} -O taq-linux
-          wget ${{ needs.build-binaries.outputs.public-url-windows }} -O taq-windows.exe
-          wget ${{ needs.build-binaries.outputs.public-url-macos }} -O taq-macos
-# wget ${{ needs.vscode-extension-workflow.outputs.vsixGcsUrl }}
+#       - name: Download binaries 
+#         id: download-binaries 
+#         run: |
+#           mkdir release && cd release
+#           wget ${{ needs.build-binaries.outputs.public-url-ubuntu }} -O taq-linux
+#           wget ${{ needs.build-binaries.outputs.public-url-windows }} -O taq-windows.exe
+#           wget ${{ needs.build-binaries.outputs.public-url-macos }} -O taq-macos
+# # wget ${{ needs.vscode-extension-workflow.outputs.vsixGcsUrl }}
 
-      - name: Pre-release
-        if: ${{ needs.detect-minor-version.outputs.minor-version == 'odd' }}
-        id: pre-release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: |
-            ./release/*
-          draft: false
-          prerelease: true
+#       - name: Pre-release
+#         if: ${{ needs.detect-minor-version.outputs.minor-version == 'odd' }}
+#         id: pre-release
+#         uses: softprops/action-gh-release@v1
+#         with:
+#           files: |
+#             ./release/*
+#           draft: false
+#           prerelease: true
 
-      - name: Final release
-        if: ${{ needs.detect-minor-version.outputs.minor-version == 'even' }}
-        id: final-release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: |
-            ./release/*
-          draft: true
+#       - name: Final release
+#         if: ${{ needs.detect-minor-version.outputs.minor-version == 'even' }}
+#         id: final-release
+#         uses: softprops/action-gh-release@v1
+#         with:
+#           files: |
+#             ./release/*
+#           draft: true
