--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -84,7 +84,7 @@ jobs:
       - name: Cache node modules
         uses: actions/cache@v3
         with:
-          path: ./node_modules
+          path: ./node_modules/
           key: cache-node-modules-${{ github.run_id }}
 
   # build-binaries:
