--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,6 +79,7 @@ jobs:
       - name: Build all
         run: |
           echo "$(pwd)" >> $GITHUB_PATH
+          echo "$PATH"
           npm run build-all
           ls -ltr ./node_modules/@taqueria/node-sdk/
 
