chore: added path root directory to path

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,6 +78,7 @@ jobs:
 
       - name: Build all
         run: |
+          pwd
           echo "$(pwd)" >> $GITHUB_PATH
           echo "$PATH"
           npm run build-all
