--- a/.github/workflows/vscode-extension.yml
+++ b/.github/workflows/vscode-extension.yml
@@ -58,7 +58,7 @@ jobs:
         run: npm run compile:test --workspace ${{ env.GIT_WORKSPACE }}
 
       - name: Run Unit Tests on Linux
-        run: ls -l ./taqueria-vscode-extension/src/test/suite/data/hello-tacos.mligo
+        run: ls -l ./taqueria-vscode-extension/src/test/suite/data/
       
       - name: Run Unit Tests on Linux
         run: xvfb-run -a npm test --workspace ${{ env.GIT_WORKSPACE }}
