chore: add back the test and change cache path

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -87,6 +87,11 @@ jobs:
           path: "**/node_modules"
           key: cache-node-modules-${{ github.run_id }}
 
+      - name: List
+        run: |
+          ls -ltr ./node_modules/@taqueria/node-sdk/
+          npm list -ws
+
   build-binaries:
     permissions:
       contents: 'read'
@@ -134,6 +139,12 @@ jobs:
         with:
           path: "**/node_modules"
           key: cache-node-modules-${{ github.run_id }}
+
+      - name: List
+        run: |
+          ls -ltr ./node_modules/@taqueria/node-sdk/
+          ls -ltr ./taqueria-sdk/
+          npm list -ws
 
       ## This job will compile the binary for the target OS. The binary is then tested by initializing a project called "test_project"
       ## If the initialization command output is equal to "Project taq'ified!" we know that the binary works for the given os, else the command exits with status code 1.
@@ -259,6 +270,12 @@ jobs:
         with:
           path: "**/node_modules"
           key: cache-node-modules-${{ github.run_id }}
+
+      - name: List
+        run: |
+          ls -ltr ./node_modules/@taqueria/node-sdk/
+          ls -ltr ./taqueria-sdk/
+          npm list -ws
 
       - name: download the binary from the build-binaries job and make it executable
         if: ${{ !github.event.pull_request.head.repo.fork }}
