--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -84,8 +84,7 @@ jobs:
       - name: Cache node modules
         uses: actions/cache@v3
         with:
-          path: |
-            "./node_modules/**/*"
+          path: ./node_modules/**
           key: cache-node-modules-${{ github.run_id }}
 
       - name: List
@@ -138,8 +137,7 @@ jobs:
       - name: Cache node modules
         uses: actions/cache@v3
         with:
-          path: |
-            "./node_modules/**/*"
+          path: ./node_modules/**
           key: cache-node-modules-${{ github.run_id }}
 
       ## This job will compile the binary for the target OS. The binary is then tested by initializing a project called "test_project"
@@ -264,8 +262,7 @@ jobs:
       - name: Cache node modules
         uses: actions/cache@v3
         with:
-          path: |
-            "./node_modules/**/*"
+          path: ./node_modules/**
           key: cache-node-modules-${{ github.run_id }}
 
       - name: List
