revert prev commit

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@taqueria/protocol",
+	"name": "@taqueria/taqueria",
 	"version": "0.20.2",
 	"description": "An easy to use opinionated tool for building, testing, and deploying Tezos software",
 	"main": "index.ts",
