chore: fix publish packages dependency

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -319,6 +319,8 @@ jobs:
 
   build-and-publish-npm-packages:
     runs-on: ubuntu-latest
+    needs:
+      - run-tests
     permissions:
       packages: write
       contents: read
