chore: add cache to vscode workflows

--- a/.github/workflows/vscode-extension.yml
+++ b/.github/workflows/vscode-extension.yml
@@ -53,13 +53,15 @@ jobs:
       - name: Attempt to rebuild
         run: npm rebuild | true
       
-      - name: Install Dependencies
-        run: npm ci
+      - name: Cache node modules
+        uses: actions/cache@v3
+        with:
+          path: ./node_modules/**
+          key: cache-node-modules-${{ github.run_id }}
 
-      - name: Compile packages
+      - name: Add working dir to PATH
         run: |
           echo "$(pwd)" >> $GITHUB_PATH
-          npm run build-all
       
       - name: Compile TS
         run: npm run compile:test --workspace ${{ env.GIT_WORKSPACE }}
@@ -110,11 +112,11 @@ jobs:
         with:
           node-version: 16.16.x
 
-      - name: Install Dependencies
-        run: npm ci
-
-      - name: Compile packages
-        run: npm run build-all
+      - name: Cache node modules
+        uses: actions/cache@v3
+        with:
+          path: ./node_modules/**
+          key: cache-node-modules-${{ github.run_id }}
       
       - name: Compile TS
         run: npm run compile --workspace ${{ env.GIT_WORKSPACE }}
