chore: add cache to vscode workflows

--- a/.github/workflows/vscode-extension.yml
+++ b/.github/workflows/vscode-extension.yml
@@ -61,6 +61,7 @@ jobs:
 
       - name: Add working dir to PATH
         run: |
+          npm ci
           echo "$(pwd)" >> $GITHUB_PATH
       
       - name: Compile TS
